[reservation] 예약 변경, 취소, 조회 작업